--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.5.1",
+    "clsx": "^1.0.4",
     "firebase": "^6.6.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
